# Pearl

./: README.md  pyproject.toml  train.sh  validate.sh
configs/xlmr/base/: da-estimator-base.yaml
configs/xlmr/large/: da-estimator.yaml
pacscore/evaluation/pac_score/: pac_score.py
pearl/: cli.py  corpora.py  schedulers.py  trainer.py
pearl/metrics/: regression_metrics.py
pearl/models/: __init__.py  model_base.py  utils.py
pearl/models/encoders/: bert.py  encoder_base.py  xlmr.py
pearl/models/estimators/: __init__.py  estimator_base.py  pearl_estimator.py  quality_estimator.py
pearl/models/hadamard/: hadamard.py
pearl/models/ranking/: __init__.py  pearl_ranker.py  ranking_base.py
pearl/modules/: feedforward.py
pearl/tokenizers_/: tokenizer_base.py
save_features/: README.md
save_features/envs/beit3/: pyproject.toml
save_features/envs/blip2/: pyproject.toml
save_features/envs/clippp/: pyproject.toml
save_features/envs/stella/: pyproject.toml
save_features/pipelines/: __init__.py  save_beit3_spica_features.py  save_blip2_spica_features.py  save_clippp_spica_features.py  save_stella_spica_features.py  spica_utils.py
save_features/pipelines/beit3/: modeling_finetune.py  test.py  utils.py
save_features/scripts/: run_spica_feature_jobs.sh
validate/: clip_score.py  compute_correlations.py  compute_foil.py  compute_pascal50s.py  dataset.py  evaluate_all.py  metrics.py  mid.py  pascal50s.py  validate.py
