[tool.poetry]
name = "spica-beit3-pipeline"
version = "0.1.0"
description = "SPICA dataset feature extraction using BEiT3"
authors = ["smilab <noreply@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.2.2+cu121", source = "pytorch-cu121"}
torchvision = {version = "0.17.2+cu121", source = "pytorch-cu121"}
timm = "0.4.12"
torchscale = "^0.2.0"
transformers = "^4.44.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
tqdm = "^4.66.0"
pillow = "^10.3.0"
sentencepiece = "^0.2.0"
torchmetrics = "^1.4.0"
tensorboardX = "^2.6"
open-clip-torch = "^2.24.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

